--- a/Machine_Learning_Deep_Learning/Deep_Learning-rpubs.html
+++ b/Machine_Learning_Deep_Learning/Deep_Learning-rpubs.html
@@ -749,7 +749,7 @@ hljs.initHighlightingOnLoad();
   <div class="slides">
 
 <section data-state="section" data-transition="linear" data-transition-speed="default">
-<h1>Neural Networks and Deep Learning</h1><p>Shaurya Jauhari, Mora Lab, Guangzhou Medical University. (Email: shauryajauhari@gzhmu.edu.cn)<br/>2019-07-26 12:42:51</p>
+<h1>Neural Networks and Deep Learning</h1><p>Shaurya Jauhari, Mora Lab, Guangzhou Medical University. (Email: shauryajauhari@gzhmu.edu.cn)<br/>2019-08-30 11:53:35</p>
 
 <div class="slideContent" >
 
@@ -800,7 +800,11 @@ hljs.initHighlightingOnLoad();
 <h3>Deep Learning : Essential Characteristics</h3>
 <div class="slideContent" >
 <ul>
-<li>Self learning and feature extraction<br/></li>
+<li>Hierarchical Learning
+
+<ul>
+<li>Self evolution and feature extraction<br/></li>
+</ul></li>
 <li>Predominantly employed for <strong>multimedia mining</strong><br/></li>
 <li><strong>Deep Learning</strong> is a kind of <strong>machine learning</strong> that focuses on <strong>neural networks</strong>.</li>
 </ul>
